# booking_status

./: LICENSE  README.md  app.py  pyproject.toml  readme.md  requirements.txt
.streamlit/: config.toml
data/processed/: clean_data.csv  predictions.xlsx  test_data.csv  test_results.csv  train_data.csv
notebooks/: Hotel Booking Status Prediction.ipynb
scr/: __init__.py  data_preprocessing.py  evaluate_model.py  main.py  model_training.py  predict.py  preprocessing.py  train_model.py  utils.py
