[tool.poetry]
name = "hotel-booking"
version = "0.1.0"
description = "Booking status prediction project"
authors = ["datalopes1 <datalopes1@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
lightgbm = "^4.5.0"
category-encoders = "^2.6.4"
feature-engine = "1.8.1"
optuna = "^4.0.0"
openpyxl = "^3.1.5"
notebook = "^7.2.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
